# open-investigator

./: .gitignore  Cargo.toml  LICENSE  PACKAGE_MANIFEST.txt  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/open-investigator-cli/: Cargo.toml  README.md
crates/open-investigator-cli/src/: main.rs
crates/open-investigator-runtime/: Cargo.toml
crates/open-investigator-runtime/src/: agent.rs  analyst.rs  case.rs  config.rs  lib.rs  model.rs  playbook.rs  policy.rs  report.rs  runner.rs  store.rs  tools.rs  util.rs
crates/open-investigator-runtime/src/collector/: mod.rs
docs/: AI_AGENT_LOOP.md  AI_TOOL_LOOP.md  ARCHITECTURE.md  CLEAN_PRODUCT_AUDIT.md  INVESTIGATION_CAPABILITY.md  JAVA_MEMORY_DEEP_DIVE.md  PRODUCTION_NOTES.md  RUNTIME_DERIVATION.md  USER_GUIDE.md
docs/promotion/: README.md  article-ai-incident-tool-safety-boundary.md  article-ai-server-incident-response.md  article-suspicious-ip-linux-triage.md  community-posts.md  community-scale-plan.md  content-distribution-assets.md  external-entry-status.md  manifest.json  reusable-promotion-playbook.md
examples/: ask_inv_report_en.md  ask_safe_report_en.md  config.toml
