[workspace]
members = [
  "crates/open-investigator-runtime",
  "crates/open-investigator-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Arvanta Cyber Inc (Qimin Zhao) <oi@arvantacyber.com>"]
repository = "https://github.com/SEc-123/open-investigator"
homepage = "https://www.arvantacyber.com/open-investigator"
readme = "README.md"
description = "A local read-only AI server incident investigator."

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9"
