[package]
name = "open-investigator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "oi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
open-investigator-runtime = { path = "../open-investigator-runtime" }
tokio.workspace = true
